# mlflow-iris

./: .gitignore  README.md  pyproject.toml
src/mlflow_iris/: inference_iris_model.py  train_iris_model.py
